Minor bug fix to dashboards and how they save the card layout Fix with z-index bug causing the card footer to show above certain popups and looking silly

--- a/frontend/static/styles/main.css
+++ b/frontend/static/styles/main.css
@@ -1082,7 +1082,7 @@ label {
     padding: 0.5rem 1rem;
     top: -16px;
     position: relative;
-    z-index: 99999;
+    z-index: 999;
 }
 
 .cursor-pointer {
